# sqlite-amalgamation

./: CMakeLists.txt
